refactor(core): 开始 1.2.0-SNAPSHOT 支持 Java 8 兼容